--- a/src/index.css
+++ b/src/index.css
@@ -58,8 +58,8 @@ Global Styles
   box-sizing: border-box;
 }
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background: var(--clr-grey-10);
   color: var(--clr-grey-1);
   line-height: 1.5;
@@ -169,6 +169,9 @@ main {
 }
 .review:hover {
   box-shadow: var(--dark-shadow);
+  border-width: 10px;
+
+  /* border: 1re red; */
 }
 .img-container {
   position: relative;
@@ -200,7 +203,7 @@ main {
   color: var(--clr-white);
 }
 .img-container::before {
-  content: '';
+  content: "";
   width: 100%;
   height: 100%;
   background: var(--clr-primary-5);
